--- a/index.css
+++ b/index.css
@@ -1,18 +1,51 @@
-*{
-    padding:0;
+* {
+    padding: 0;
     margin: 0;
 }
-.nav{
+
+.nav {
     background-color: red;
     height: 60px;
     display: flex;
+    width: 100%;
+    /* justify-content: space-evenly;*/
 }
-.nav h1{
+
+.actions {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav h1 {
     padding: 15px;
+    font-family: "Charm", serif;
+    font-weight: 700;
+    font-style: normal;
 }
-h1 sub{
+
+h1 sub {
     color: aliceblue;
 }
-.header{
-    width: 128px;
+
+.header {
+    width: 30%;
+}
+
+.nav-links {
+    width: 75%;
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+
+}
+.margin-navlinks{
+  margin: 10px; 
+}
+.margin-navlinks a{
+    text-decoration: none;
+}
+.nav-btn{
+    height: 50px;
+    width: 50px;
 }
