--- a/index.css
+++ b/index.css
@@ -119,3 +119,9 @@ h1 sub {
     border-bottom: 0.5px white solid;
 
 }
+
+@media screen and (min-width:375px) and (max-width:1025px) {
+
+    
+    
+}
