--- a/index.css
+++ b/index.css
@@ -6,11 +6,17 @@
     font-style: normal;
 }
 body{
-    background-color:rgba(0,0,0,0.8);
+        background: linear-gradient(to right,black, red);
+        -webkit-background-clip: text;
+        background-clip: unset;
+        color: transparent; 
+}
+.hr{
+    background-color: black;
 }
 
 .nav {
-    background-color: red;
+    background: linear-gradient(to right,black, red);
     height: 60px;
     display: flex;
     width: 100vw;
@@ -24,6 +30,7 @@ body{
 }
 
 .nav h1 {
+    color: red;
     padding: 15px;
     font-family: "Charm", serif;
     font-weight: 700;
@@ -46,7 +53,7 @@ h1 sub {
 
 }
 .nav-links a{
-    color: black;
+    color:red;
 }
 .margin-navlinks {
     margin: 10px;
@@ -77,7 +84,7 @@ h1 sub {
     position: fixed;
     right: 0;
     height: 100%;
-    background-color: red;
+    background: linear-gradient(to right, red,black);
     width: 250px;
 }
 
@@ -87,7 +94,7 @@ h1 sub {
 
 .nav-link-2 .cancel-btn {
     position: absolute;
-    color: black;
+    color:red;
     right: 15px;
     text-transform: uppercase;
     font-size: 40px;
