--- a/index.css
+++ b/index.css
@@ -152,3 +152,30 @@ h1 sub {
     
 }
 
+.about-me{
+    display: flex;
+    border-radius: 10px;
+    flex-wrap: wrap;
+    height: 300px;
+    background: linear-gradient(to right,black, red,black);
+    margin-top: 5%;
+    border-color: red;
+  color:white;
+  }
+  .image{
+    height: 100%;
+    width: 50%;
+   text-align:center;
+   margin-right: 5%;
+  }
+  .image img{
+    height: 300px;
+    width: 300px;
+    border: 3px red solid;
+    border-radius: 50%;
+  }
+  .left-part{
+    text-align:center;
+    height: 100%;
+    width: 50%;
+  }
