--- a/index.css
+++ b/index.css
@@ -195,6 +195,7 @@ b span{
 .about{
     margin-top: 10px;
     display: flex;
+    height: 500px;
  width: 100%;
  color: #fff;
  background: linear-gradient(to right,black,red,black);
@@ -205,9 +206,11 @@ b span{
 }
 .about #left-part img{
     height: 300px;
+   
     width: 300px;
     margin: 10%;
 }
 .about #right-part{
     width: 50%;
+    margin: 10% 0;
 }
