--- a/index.css
+++ b/index.css
@@ -195,7 +195,7 @@ b span{
 .about{
     margin-top: 10px;
     display: flex;
-    height: 500px;
+    height: 400px;
  width: 100%;
  color: #fff;
  background: linear-gradient(to right,black,red,black);
@@ -212,5 +212,5 @@ b span{
 }
 .about #right-part{
     width: 50%;
-    margin: 10% 0;
+    margin: 4%;
 }
