--- a/index.css
+++ b/index.css
@@ -195,7 +195,6 @@ b span{
 .about{
     margin-top: 10px;
     display: flex;
-    height: 400px;
  width: 100%;
  color: #fff;
  background: linear-gradient(to right,black,red,black);
@@ -203,6 +202,7 @@ b span{
 .about #left-part{
     width: 50%;
     text-align: center;
+    margin: 2%;
 }
 .about #left-part img{
     height: 300px;
