--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ h1 sub {
 }
 
 .nav .btn {
+    color: #fff;
     height: 50px;
     width: 50px;
 }
@@ -84,7 +85,7 @@ h1 sub {
     position: fixed;
     right: 0;
     height: 100%;
-    /* background: linear-gradient(to right, red,black); */
+    background: linear-gradient(to right, red,rgba(0,0,0,0.2));
     width: 250px;
 }
 
@@ -94,7 +95,7 @@ h1 sub {
 
 .nav-link-2 .cancel-btn {
     position: absolute;
-    color:red;
+    color:white;
     right: 15px;
     text-transform: uppercase;
     font-size: 40px;
@@ -179,7 +180,7 @@ h1 sub {
     height: 300px;
     width: 300px;
     border: 3px red solid;
-    border-radius: 50%;
+    border-radius: 5%;
   }
   .left-part{
     text-align:center;
