--- a/css/form.css
+++ b/css/form.css
@@ -1,13 +1,17 @@
 body{
-    display: block;
+    display:flex;
+    justify-content: center;
     align-items: center;
-    text-align: center;
+    height: 100vh;
+    width: 100vw;
+    background:linear-gradient(to right,green,aqua);
 }
 
 
 .form-container{
     color: white;
-    height: 500px;
+    height: 50%;
     width: 500px;
+    text-align: center;
     background-color: rebeccapurple;
 }
