--- a/css/form.css
+++ b/css/form.css
@@ -1,10 +1,14 @@
+*{
+    background:linear-gradient(to right,green,aqua);
+}
+
+
 body{
     display:flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background:linear-gradient(to right,green,aqua);
 }
 
 
@@ -13,5 +17,32 @@ body{
     height: 50%;
     width: 500px;
     text-align: center;
+    border-radius: 10px;
     background-color: rebeccapurple;
+}
+.form-container h2{
+    color: black;
+    font-size: 40px;
+    text-shadow: 3px 1px #558ABB;
+}
+input{border: transparent;
+border-radius: 5px;
+height: 40px;
+color: black;
+font-size: larger;
+width: 350px;}
+input::placeholder{
+    color:rgb(103, 209, 209);
+}
+textarea{border: transparent;
+    width: 350px;
+    height: 100px
+}
+textarea::placeholder
+{
+    color: rgb(103, 209, 209);
+    font-size: large;
+}
+.lower-part{
+  
 }
