--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,3 @@
-*{
-    background:linear-gradient(to right,green,aqua);
-}
-
 
 body{
     display:flex;
@@ -18,12 +14,12 @@ body{
     width: 500px;
     text-align: center;
     border-radius: 10px;
-    background-color: rebeccapurple;
+    background-color:black;
 }
 .form-container h2{
-    color: black;
+    color:red;
     font-size: 40px;
-    text-shadow: 3px 1px #558ABB;
+    text-shadow: 3px 1px #fff;
 }
 input{border: transparent;
 border-radius: 5px;
