--- a/css/form.css
+++ b/css/form.css
@@ -9,14 +9,15 @@ body{
 
 
 .form-container{
-    position: absolute;
     color: white;
+    position: absolute;
     height: 50%;
     width: 500px;
     text-align: center;
     border-radius: 10px;
     background-color:black;
     z-index: 2;
+    display: inline-block;
 }
 
 .form-container h2{
@@ -45,3 +46,14 @@ textarea::placeholder
 /* .lower-part{
   
 } */
+
+.form-container2{
+    position: relative;
+    z-index: 1;
+    color: white;
+    height: 50%;
+    width: 500px;
+    text-align: center;
+    border-radius: 10px;
+    background-color:black;
+}
