--- a/css/form.css
+++ b/css/form.css
@@ -11,7 +11,7 @@ body{
 .form-container{
     color: white;
     position: absolute;
-    height: 50%;
+    height: 500px;
     width: 500px;
     text-align: center;
     border-radius: 10px;
@@ -50,10 +50,11 @@ textarea::placeholder
 .form-container2{
     position: relative;
     z-index: 1;
+    top: -19px;
     color: white;
-    height: 50%;
+    height: 500px;
     width: 500px;
     text-align: center;
     border-radius: 10px;
-    background-color:black;
+    background-color:red;
 }
