--- a/css/form.css
+++ b/css/form.css
@@ -61,7 +61,7 @@ textarea::placeholder {
     width: 500px;
     text-align: center;
     border-radius: 10px;
-    background-color: blue;
+    background:linear-gradient(to right,black,red);
 }
 
 .form-container2 h2 {
@@ -75,6 +75,7 @@ textarea::placeholder {
     border: none;
     color: white;
     padding: 15px 32px;
+    border-radius: 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -85,7 +86,7 @@ textarea::placeholder {
 }
 
 .button:hover {
-    background-color: #555555;
+    background:linear-gradient(to right ,red,black);
 }
 
 .button:active {
