--- a/css/form.css
+++ b/css/form.css
@@ -4,6 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     width: 100vw;
+    background-color: black;
 }
 
 
@@ -14,7 +15,7 @@ body {
     width: 500px;
     text-align: center;
     border-radius: 10px;
-    background-color: black;
+    background-color: #fff;
     z-index: 2;
 }
 
@@ -54,6 +55,7 @@ textarea::placeholder {
 
 .form-container2 {
     position: relative;
+    border-left: 1px solid white;
     z-index: 1;
     top: -34px;
     color: white;
@@ -84,7 +86,9 @@ textarea::placeholder {
     cursor: pointer;
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
-
+.input-text{
+    background: linear-gradient(to right,rgba(255,0,0,0.4),rgba(0,0,0,0.4));
+}
 .button:hover {
     background:linear-gradient(to right ,red,black);
 }
