--- a/css/form.css
+++ b/css/form.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: #fff;
 }
 
 
@@ -15,7 +15,7 @@ body {
     width: 500px;
     text-align: center;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: #000;
     z-index: 2;
 }
 
@@ -87,7 +87,11 @@ textarea::placeholder {
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 .input-text{
-    background: linear-gradient(to right,rgba(255,0,0,0.4),rgba(0,0,0,0.4));
+    background: linear-gradient(to right,red,black);
+}
+.input{
+    width: 40%;
+    background: linear-gradient(to right,red,black);
 }
 .button:hover {
     background:linear-gradient(to right ,red,black);
@@ -110,4 +114,7 @@ textarea::placeholder {
 .previous-button {
     background-color: #f44336;
     /* Red */
+}
+.Firstname{
+    width: 50%;
 }
