--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
     /* font-family: "Charm", serif; */
     font-weight: 700;
     font-style: normal;
+    /* #a9ff1c premissin less web color */
 }
 body{
        background-color:black;
