--- a/css/index.css
+++ b/css/index.css
@@ -240,20 +240,36 @@ h1 span{
     text-align: center;
     margin: 10px;
     border-radius: 5px;
+   
 }
 #img1:hover{
-    background-color:#cccccc; 
+    box-shadow: 5px 5px 20px red; 
+ transform: scale(1.1);
+ transition: transform 1s ease-in-out;
 }
 #img2:hover{
-    background-color:#b3b3b3; 
+    transform: scale(1.1);
+    transition: transform 1s ease-in-out;
 }#img3:hover{
-    background-color:#999999; 
+    transform: scale(1.1);
+    transition: transform 1s ease-in-out;
 }#img4:hover{
-    background-color:#808080; 
+    transform: scale(1.1);
+    transition: transform 1s ease-in-out;
 }#img5:hover{
-    background-color:#666666; 
+    transform: scale(1.1);
+    transition: transform 1s ease-in-out;
 }#img6:hover{
-    background-color:#4d4d4d; 
+    transform: scale(1.1);
+ transition: transform 1s ease-in-out;
+}
+#img7:hover{
+    transform: scale(1.1);
+    transition: transform 1s ease-in-out;
+}
+#img8:hover{
+    transform: scale(1.1);
+    transition: transform 0.5s ease-in-out;
 }
 @media screen and (min-width:0px) and (max-width:1020px) {
     
@@ -275,7 +291,6 @@ h1 span{
 .techbox{
     height: 261px;
     box-sizing: content-box;
-    background-color:rgb(255,0,0);
     border-radius:5px;
     margin: 2px;
 }
