--- a/css/index.css
+++ b/css/index.css
@@ -195,7 +195,7 @@ h1 span{
 }
 #about{
     box-shadow: 5px 5px 20px red;
-    padding-bottom: 20px;
+    padding: 0 20px 20px 20px;
 }
 .container2{
     width: 90%;
