--- a/css/form.css
+++ b/css/form.css
@@ -11,8 +11,8 @@ body {
 .form-container {
     color: white;
     position:absolute;
-    height:30%;
-    width: 30%;
+    height: 536px;
+    width: 500px;
     text-align: center;
     border-radius: 10px;
     background-color: #000;
@@ -24,13 +24,13 @@ body {
     
     .form-container {
         color: white;
-        position: relative;
-        height: 508px;
+        position: absolute;
+        height: 536px;
         width: 500px;
        margin: 0 auto;
         border-radius: 10px;
         background-color: #000;
-        z-index: -1;
+        z-index: 2;
         transition: z-index 1s ease;
     }
 }
@@ -78,7 +78,7 @@ textarea::placeholder {
     z-index: 1;
     top: -34px;
     color: white;
-    height: 508px;
+    height: 536px;
     width: 500px;
     text-align: center;
     border-radius: 10px;
