--- a/css/form.css
+++ b/css/form.css
@@ -1,3 +1,14 @@
+
+
+*{
+    font-family: monospace;
+}
+
+
+
+
+
+
 body {
     display: flex;
     justify-content: center;
@@ -38,7 +49,7 @@ body {
 
     color: red;
     font-size: 40px;
-    text-shadow: 3px 1px #fff;
+    text-shadow: 3px 1px 3px #fff;
 }
 
 input {
@@ -58,7 +69,7 @@ textarea {
     margin-top: 90px;
     border: transparent;
     width: 350px;
-    height: 100px
+    height: 84px
 }
 br+label{
     font-size:large;
