--- a/css/index.css
+++ b/css/index.css
@@ -196,7 +196,7 @@ h1 span{
 }
 #about{
     box-shadow: 5px 5px 20px red;
-    padding: 0 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
 }
 .pos-Relative{
     position: relative;
