--- a/css/index.css
+++ b/css/index.css
@@ -307,7 +307,7 @@ h1 span{
 }
 
 /*education section*/
-.container{
+.container*{
     display: flex;
     align-items: center;
     justify-content: center;
