--- a/css/index.css
+++ b/css/index.css
@@ -183,6 +183,7 @@ h1 sub {
 }
 h1 span{
     color: red;
+    -webkit-text-stroke: 2px red;
 }
 
 @media screen and (min-width:0px) and (max-width:1020px) {
