--- a/css/index.css
+++ b/css/index.css
@@ -182,8 +182,8 @@ h1 sub {
     width: 40%;
 }
 h1 span{
-    color: red;
-    -webkit-text-stroke: 2px red;
+    color:black;
+    -webkit-text-stroke: 1px red;
 }
 
 @media screen and (min-width:0px) and (max-width:1020px) {
