--- a/css/index.css
+++ b/css/index.css
@@ -185,7 +185,9 @@ h1 span{
     color:black;
     -webkit-text-stroke: 1px red;
 }
-
+#about p {
+    line-height: 20px;
+}
 @media screen and (min-width:0px) and (max-width:1020px) {
     
     .right-part img{
