--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,11 @@ h1 sub {
     height: 100%;
     width: 40%;
 }
+.left-part{
+    font-size: 42px;
+    color:black;
+    -webkit-text-stroke: 1px white;
+}
 h1 span{
     font-size: 42px;
     color:black;
