--- a/css/index.css
+++ b/css/index.css
@@ -182,12 +182,18 @@ h1 sub {
     width: 40%;
 }
 .left-part h1{
-    font-size: 42px;
+    font-size: 100px;
     color:black;
     -webkit-text-stroke: 1px white;
 }
+
+#name,#front,#dev span{
+    font-size:100px;
+    color:black;
+    -webkit-text-stroke: 1px red;
+}
 h1 span{
-    font-size: 42px;
+    font-size:43px;
     color:black;
     -webkit-text-stroke: 1px red;
 }
