--- a/css/index.css
+++ b/css/index.css
@@ -190,20 +190,20 @@ h1 sub {
 #name span,#front span,#dev span{
     font-size:100px;
     color:black;
-    -webkit-text-stroke: 1px red;
+    -webkit-text-stroke: 0.5px red;
 }
 h1 span{
     font-size:43px;
     color:black;
     -webkit-text-stroke: 1px red;
 }
-#about p {
+#about{
     line-height: 20px;
 }
 @media screen and (min-width:0px) and (max-width:1020px) {
     
     .right-part img{
-        
+
         width: 80%;
     }
 }
