--- a/css/index.css
+++ b/css/index.css
@@ -200,10 +200,31 @@ h1 span{
 #about{
     line-height: 40px;
 }
+
+@media screen and (min-width:0px) and (max-width:1020px) {
+    
+    .left-part h1{
+        font-size: 42px;
+        color:black;
+        -webkit-text-stroke: 0.5px white;
+    }
+    
+    #name span,#front span,#dev span{
+        font-size:100px;
+        color:black;
+        -webkit-text-stroke: 0.5px red;
+    }
+    h1 span{
+        font-size:43px;
+        color:black;
+        -webkit-text-stroke: 0.5px red;
+    }
+}
+
 @media screen and (min-width:0px) and (max-width:1020px) {
     
     #about{
-        line-height: 25px;
+        line-height: 34px;
     }
 }
 @media screen and (min-width:0px) and (max-width:1020px) {
