updated bg color

--- a/css/index.css
+++ b/css/index.css
@@ -275,7 +275,7 @@ h1 span{
     color:wheat;
 }
 .tech{
-    background-color: #fff;
+    /* background-color: #fff; */
     margin-top: 60px;
     display: flex;
     flex-wrap: wrap;
