--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@ h1 sub {
     position: fixed;
     right: 0;
     height: 100%;
-    /* background-color:white; */
+    background-color:black;
     width: 250px;
 }
 
