--- a/css/index.css
+++ b/css/index.css
@@ -83,7 +83,9 @@ h1 sub {
     right: 0;
     height: 100%;
     background-color:black;
-    width: 250px;
+    width: 50%;
+    max-width: 50%;
+
 }
 
 .nav-link-2 .cbtn {
@@ -105,7 +107,7 @@ h1 sub {
     font-size: 20px;
     flex-direction: column;
     /* justify-content: space-between;*/
-    text-align: center;
+    /* text-align: center; */
     height: 300px;
     width: 100%;
 }
