--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,7 @@ h1 sub {
     font-size: 20px;
     flex-direction: column;
     /* justify-content: space-between;*/
-    /* text-align: center; */
+    text-align: left;
     height: 300px;
     width: 100%;
 }
