--- a/css/index.css
+++ b/css/index.css
@@ -117,7 +117,7 @@ h1 sub {
     color: red;
 }
 
-.actions2 .about {
+.actions2 .about-m {
     padding: 10px;
     border-top: 0.5px rgb(0, 0, 0) solid;
 
