--- a/css/index.css
+++ b/css/index.css
@@ -128,6 +128,9 @@ h1 sub {
 }
 
 .actions2 .skills {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
     border-top: 0.5px rgb(0, 0, 0) solid;
 
