--- a/css/index.css
+++ b/css/index.css
@@ -145,6 +145,11 @@ h1 sub {
     border-bottom: 0.5px rgb(0, 0, 0) solid;
 
 }
+.nav-link-2-hover:hover{
+    font-size: larger;
+    transform: translateX(5px);
+    transition: all 0.5s ease;
+}
 
 @media screen and (min-width:0px) and (max-width:1020px) {
 
