--- a/css/index.css
+++ b/css/index.css
@@ -145,7 +145,7 @@ h1 sub {
     border-bottom: 0.5px rgb(0, 0, 0) solid;
 
 }
-.nav-link-2-hover:hover{
+.actions2 a:hover{
     font-size: larger;
     transform: translateX(5px);
     transition: all 0.5s ease;
