--- a/css/index.css
+++ b/css/index.css
@@ -336,11 +336,11 @@ h1 span{
 }
 #img7:hover{
     transform: scale(1.1);
-    transition: transform 1s ease-in-out;
+    transition: transform 0.5s ease-in-out;
 }
 #img8:hover{
     transform: scale(1.1);
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease;
 }
 @media screen and (min-width:0px) and (max-width:1020px) {
     
