--- a/css/index.css
+++ b/css/index.css
@@ -336,7 +336,7 @@ h1 span{
 }
 #img7:hover{
     transform: scale(1.1);
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease;
 }
 #img8:hover{
     transform: scale(1.1);
