--- a/css/index.css
+++ b/css/index.css
@@ -332,7 +332,7 @@ h1 span{
     transition: transform 1s ease-in-out;
 }#img6:hover{
     transform: scale(1.1);
- transition: transform 0.5s ease-in-out;
+ transition: transform 0.5s ease;
 }
 #img7:hover{
     transform: scale(1.1);
