--- a/css/index.css
+++ b/css/index.css
@@ -329,7 +329,7 @@ h1 span{
     transition: transform 1s ease-in-out;
 }#img5:hover{
     transform: scale(1.1);
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease;
 }#img6:hover{
     transform: scale(1.1);
  transition: transform 0.5s ease;
