--- a/css/index.css
+++ b/css/index.css
@@ -320,7 +320,7 @@ h1 span{
 }
 #img2:hover{
     transform: scale(1.1);
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease;
 }#img3:hover{
     transform: scale(1.1);
     transition: transform 0.5s ease;
