--- a/css/index.css
+++ b/css/index.css
@@ -316,7 +316,7 @@ h1 span{
 #img1:hover{
    
  transform: scale(1.1);
- transition: transform 1s ease-in-out;
+ transition: transform 1s ease;
 }
 #img2:hover{
     transform: scale(1.1);
