updated edu sec

--- a/css/index.css
+++ b/css/index.css
@@ -378,6 +378,7 @@ h1 span{
     color: red;
 }
 .Education-container{
+    margin-top: 2%;
     height: 100%;
     width: 100%;
     display: inherit;
