--- a/css/index.css
+++ b/css/index.css
@@ -79,11 +79,11 @@ h1 sub {
 }
 
 .nav-link-2 {
-    position: fixed;
-    right: -350px;
+    position:absolute;
+    right: 10px;
     height: 100%;
     background-color:black;
-    width: 50%;
+    width: 0%;
     max-width: 50%;
 transition: all 0.5s linear;
 }
@@ -100,6 +100,10 @@ transition: all 0.5s linear;
     text-transform: uppercase;
     font-size: 40px;
     text-decoration: none;
+}
+.cancel-btn:active{
+    transform: rotate(30deg);
+    transition:rotate 0.5s ease 1s;
 }
 
 .actions2 {
